<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#F4F5F7"
              android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen50"
        android:layout_marginLeft="@dimen/dimen25"
        android:layout_marginRight="@dimen/dimen25"
        android:layout_marginTop="@dimen/dimen15"
        android:background="@null"
        android:cursorVisible="false"
        android:drawableLeft="@mipmap/user"
        android:drawablePadding="@dimen/dimen25"
        android:hint="@string/contact_username_hint"
        android:textColorHint="@color/hint_color"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen50"
        android:layout_marginLeft="@dimen/dimen25"
        android:layout_marginRight="@dimen/dimen25"
        android:layout_marginTop="@dimen/dimen15"
        android:background="@null"
        android:cursorVisible="false"
        android:drawableLeft="@mipmap/address"
        android:drawablePadding="@dimen/dimen25"
        android:hint="@string/contact_address_hint"
        android:textColorHint="@color/hint_color"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen50"
        android:layout_marginLeft="@dimen/dimen25"
        android:layout_marginRight="@dimen/dimen25"
        android:layout_marginTop="@dimen/dimen15"
        android:background="@null"
        android:cursorVisible="false"
        android:drawableLeft="@mipmap/home"
        android:drawablePadding="@dimen/dimen25"
        android:hint="@string/contact_home_num_hint"
        android:textColorHint="@color/hint_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen150"
        android:layout_marginTop="@dimen/dimen25"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="@dimen/dimen25"
            android:layout_marginRight="@dimen/dimen25"
            android:layout_marginTop="@dimen/dimen6"
            android:src="@mipmap/extra"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:cursorVisible="false"
            android:gravity="top"
            android:hint="@string/contact_extra_hint"
            android:textColorHint="@color/hint_color"/>
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:onClick="add"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen25"
        android:layout_marginRight="@dimen/dimen25"
        android:layout_marginTop="@dimen/dimen25"
        android:background="@drawable/btn_add"
        android:text="@string/add_contact"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen15"/>
</LinearLayout>