<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/activity_page_margin_left"
        android:layout_marginRight="@dimen/activity_page_margin_right"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_small_label">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/user_icon" />

        <EditText
            android:id="@+id/ev_user_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_user_account"
            android:paddingLeft="10dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/activity_page_margin_left"
        android:layout_marginRight="@dimen/activity_page_margin_right"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_small_label">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/user_pwd" />

        <EditText
            android:id="@+id/input_user_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_user_password"
            android:paddingLeft="10dp"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="@dimen/activity_page_margin_left"
            android:layout_marginRight="@dimen/activity_page_margin_right"
            android:gravity="center">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/rem_pwd"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/activity_page_margin_right"
            android:background="@null"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/forget_pwd"
            android:textSize="16sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/common_button_style"
        android:layout_marginLeft="@dimen/activity_page_margin_left"
        android:layout_marginRight="@dimen/activity_page_margin_right"
        android:layout_marginTop="30dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:gravity="center"
        android:text="@string/login_register"
        android:textSize="16sp" />

</LinearLayout>