<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/activity_page_margin_left"
        android:layout_marginRight="@dimen/activity_page_margin_right"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_small_label">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/user_email" />

        <EditText
            android:id="@+id/ev_user_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_user_email"
            android:paddingLeft="10dp"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="@dimen/activity_page_margin_left"
            android:layout_marginRight="@dimen/activity_page_margin_right"
            android:background="@drawable/shape_small_label"
            android:paddingRight="48dp">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/user_code" />

            <EditText
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/input_user_code"
                android:paddingLeft="10dp"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_page_margin_right"
            android:background="@drawable/selector_red_corners_button"
            android:text="@string/input_get_code"
            android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/activity_page_margin_left"
        android:layout_marginRight="@dimen/activity_page_margin_right"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_small_label">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/user_pwd" />

        <EditText
            android:id="@+id/ev_user_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_user_password"
            android:paddingLeft="10dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/activity_page_margin_left"
        android:layout_marginRight="@dimen/activity_page_margin_right"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_small_label">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/user_pwd" />

        <EditText
            android:id="@+id/ev_user_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_user_password_again"
            android:paddingLeft="10dp"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/common_button_style"
        android:layout_marginLeft="@dimen/activity_page_margin_left"
        android:layout_marginRight="@dimen/activity_page_margin_right"
        android:layout_marginTop="30dp"
        android:text="@string/submit" />

</LinearLayout>
