<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg_color"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rl_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/item_margin_left"
        android:layout_marginRight="@dimen/item_margin_right"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_white_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/menu_about"
            android:paddingLeft="10dp"
            android:textColor="@color/item_text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@mipmap/arrow_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_network"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/item_margin_left"
        android:layout_marginRight="@dimen/item_margin_right"
        android:layout_marginTop="2dp"
        android:background="@drawable/selector_white_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/menu_connect_network"
            android:paddingLeft="10dp"
            android:textColor="@color/item_text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@mipmap/arrow_right" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_up_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/item_margin_left"
        android:layout_marginRight="@dimen/item_margin_right"
        android:layout_marginTop="2dp"
        android:background="@drawable/selector_white_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/menu_up_data"
            android:paddingLeft="10dp"
            android:textColor="@color/item_text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@mipmap/arrow_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_set_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/item_margin_left"
        android:layout_marginRight="@dimen/item_margin_right"
        android:layout_marginTop="2dp"
        android:background="@drawable/selector_white_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/menu_set_time"
            android:paddingLeft="10dp"
            android:textColor="@color/item_text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@mipmap/arrow_right" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_set_mark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/item_margin_left"
        android:layout_marginRight="@dimen/item_margin_right"
        android:layout_marginTop="2dp"
        android:background="@drawable/selector_white_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/menu_mark"
            android:paddingLeft="10dp"
            android:textColor="@color/item_text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@mipmap/arrow_right" />
    </RelativeLayout>

</LinearLayout>
